--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: rust
-script: cd checker && cargo build --verbose --release && cd .. && ./test.sh | ./target/release/checker
+script: cd checker && cargo build --verbose --release && cd .. && ./test.sh | ./checker/target/release/checker
